--- a/index.htm
+++ b/index.htm
@@ -9,27 +9,28 @@
 </head>
 <body>
     <div id = "ContainerPrincipal">
-        <input type="number" id = "EntradaDados" >
+        <input type="string" id = "EntradaDados" placeholder="0" disabled="true">
         <div class = "BotoesOperacoes">
-            <input type="button" value="+">
-            <input type="button" value="-">
-            <input type="button" value="*">
-            <input type="button" value="/">
+            <input onclick="addValor('+')" type="button" value="+">
+            <input onclick="addValor('-')" type="button" value="-">
+            <input onclick="addValor('*')" type="button" value="*">
+            <input onclick="addValor('/')" type="button" value="/">
         </div>        
         <div class = "TecladoNumerico">
-            <input type="button" value="1">
-            <input type="button" value="2">
-            <input type="button" value="3">
-            <input type="button" value="4">
-            <input type="button" value="5">
-            <input type="button" value="6">
-            <input type="button" value="7">
-            <input type="button" value="8">
-            <input type="button" value="9">
-            <input type="button" value="AC">
-            <input type="button" value="0">
-            <input type="button" value="=">
+            <input onclick="addValor('1')" type="button" value="1">
+            <input onclick="addValor('2')" type="button" value="2">
+            <input onclick="addValor('3')" type="button" value="3">
+            <input onclick="addValor('4')" type="button" value="4">
+            <input onclick="addValor('5')" type="button" value="5">
+            <input onclick="addValor('6')" type="button" value="6">
+            <input onclick="addValor('7')" type="button" value="7">
+            <input onclick="addValor('8')" type="button" value="8">
+            <input onclick="addValor('9')" type="button" value="9">
+            <input onclick="Limpar()" type="button" value="AC">
+            <input onclick="addValor('')" type="button" value="0">
+            <input onclick="Calcular()" type="button" value="=">
         </div>
     </div>  
+    <script src="app.js"></script>
 </body>
 </html>
