arrumado bug do 0

--- a/index.htm
+++ b/index.htm
@@ -27,7 +27,7 @@
             <input onclick="addValor('8')" type="button" value="8">
             <input onclick="addValor('9')" type="button" value="9">
             <input onclick="Limpar()" type="button" value="AC">
-            <input onclick="addValor('')" type="button" value="0">
+            <input onclick="addValor('0')" type="button" value="0">
             <input onclick="Calcular()" type="button" value="=">
         </div>
     </div>  
