--- a/index.htm
+++ b/index.htm
@@ -4,33 +4,40 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="main.css">
+    <link rel="stylesheet" href="css/main.css">
+    <link href="https://fonts.googleapis.com/css?family=Anton|Kanit|Orbitron&display=swap" rel="stylesheet">
+    <link rel="shortcut icon" href="http://www.iconarchive.com/download/i99341/dtafalonso/android-lollipop/Calculator.ico">
     <title>Calculadora Top</title>
 </head>
 <body>
     <div id = "ContainerPrincipal">
+        <div class="Tela">
         <input type="string" id = "EntradaDados" placeholder="0" disabled="true">
+       </div>
         <div class = "BotoesOperacoes">
-            <span onclick="insereValorClicado('+')" type="button" value="+">+</span>
-            <span onclick="insereValorClicado('-')" type="button" value="-">-</span>
-            <span onclick="insereValorClicado('*')" type="button" value="*">*</span>
-            <span onclick="insereValorClicado('/')" type="button" value="/">/</span>
+            <span onclick="inserirValorNaTela('+')" type="button" value="+">+</span>
+            <span onclick="inserirValorNaTela('-')" type="button" value="-">−</span>
+            <span onclick="inserirValorNaTela('*')" type="button" value="*">×</span>
+            <span onclick="inserirValorNaTela('/')" type="button" value="/">÷</span>
         </div>        
         <div class = "TecladoNumerico">
-            <span onclick="insereValorClicado('1')" type="button" value="1">1</span>
-            <span onclick="insereValorClicado('2')" type="button" value="2">2</span>
-            <span onclick="insereValorClicado('3')" type="button" value="3">3</span>
-            <span onclick="insereValorClicado('4')" type="button" value="4">4</span>
-            <span onclick="insereValorClicado('5')" type="button" value="5">5</span>
-            <span onclick="insereValorClicado('6')" type="button" value="6">6</span>
-            <span onclick="insereValorClicado('7')" type="button" value="7">7</span>
-            <span onclick="insereValorClicado('8')" type="button" value="8">8</span>
-            <span onclick="insereValorClicado('9')" type="button" value="9">9</span>
+            <span onclick="inserirValorNaTela('1')" type="button" value="1">1</span>
+            <span onclick="inserirValorNaTela('2')" type="button" value="2">2</span>
+            <span onclick="inserirValorNaTela('3')" type="button" value="3">3</span>
+            <span onclick="inserirValorNaTela('4')" type="button" value="4">4</span>
+            <span onclick="inserirValorNaTela('5')" type="button" value="5">5</span>
+            <span onclick="inserirValorNaTela('6')" type="button" value="6">6</span>
+            <span onclick="inserirValorNaTela('7')" type="button" value="7">7</span>
+            <span onclick="inserirValorNaTela('8')" type="button" value="8">8</span>
+            <span onclick="inserirValorNaTela('9')" type="button" value="9">9</span>
             <span onclick="limpar()" type="button" value="AC">AC</span>
-            <span onclick="insereValorClicado('0')" type="button" value="0">0</span>
+            <span onclick="inserirValorNaTela('0')" type="button" value="0">0</span>
             <span onclick="calcular()" type="button" value="=">=</span>
         </div>
     </div>  
+    <div id = "GifNazare">
+        <img src="https://cdn.dicionariopopular.com/imagens/nazareconfusamatematica.gif">
+    </div>
     <script src="app.js"></script>
 </body>
 </html>
