--- a/index.htm
+++ b/index.htm
@@ -10,11 +10,14 @@
     <title>Calculadora Top</title>
 </head>
 <body>
-    <div id = "ContainerPrincipal">
+    <div class = "TituloCalculadoraTop">
+                <span>Calculadora Top</span>
+    </div>
+    <div id = "QuadradoPrincipalCalculadora">
         <div class="Tela">
-        <input type="string" id = "EntradaDados" placeholder="0" disabled="true">
+        <input type="string" id = "EntradaNumerosNaTelaCalculadora" placeholder="0" disabled="true">
        </div>
-        <div class = "BotoesOperacoes">
+        <div class = "BotoesOperacoesMatematicas">
             <span onclick="inserirValorNaTela('+')" type="button" value="+">+</span>
             <span onclick="inserirValorNaTela('-')" type="button" value="-">−</span>
             <span onclick="inserirValorNaTela('*')" type="button" value="*">×</span>
